force-app/main/default/objects/Plot_Saved_Soy__c/Plot_Saved_Soy__c.object-meta.xml
<CustomObject>
    <label>Plot Note</label>
    <nameField>
        <displayFormat>SS{0000000}</displayFormat>
        <label>Plot Note Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plot Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>