force-app/main/default/objects/Plot_Saved_Soy__c/fields/Active_2019__c.field-meta.xml
<CustomField>
    <fullName>Active_2019__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active_2019</label>
    <type>Checkbox</type>
</CustomField>