force-app/main/default/objects/Plot_Saved_Soy__c/fields/Brand_view__c.field-meta.xml
<CustomField>
    <fullName>Brand_view__c</fullName>
    <label>Brand view</label>
    <length>40</length>
    <type>Text</type>
</CustomField>