force-app/main/default/objects/Plot_Saved_Soy__c/fields/Charcoal_Rot__c.field-meta.xml
<CustomField>
    <fullName>Charcoal_Rot__c</fullName>
    <label>Charcoal Rot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>