force-app/main/default/objects/Plot_Saved_Soy__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Plot_Location__r.Country__c</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>