force-app/main/default/objects/Plot_Saved_Soy__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>In App Created Date</label>
    <type>DateTime</type>
</CustomField>