force-app/main/default/objects/Plot_Saved_Soy__c/fields/Customer_count__c.field-meta.xml
<CustomField>
    <fullName>Customer_count__c</fullName>
    <formula>IF(OR(CONTAINS(SiteUser__r.Email__c,&quot;donmario&quot;),CONTAINS(SiteUser__r.Email__c,&quot;gdmseeds&quot;)),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>