force-app/main/default/objects/Plot_Saved_Soy__c/fields/Emergence__c.field-meta.xml
<CustomField>
    <fullName>Emergence__c</fullName>
    <label>Emergence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>