force-app/main/default/objects/Plot_Saved_Soy__c/fields/Eye_appeal__c.field-meta.xml
<CustomField>
    <fullName>Eye_appeal__c</fullName>
    <label>Eye appeal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>