force-app/main/default/objects/Plot_Saved_Soy__c/fields/GDM_count__c.field-meta.xml
<CustomField>
    <fullName>GDM_count__c</fullName>
    <formula>IF(OR(CONTAINS(SiteUser__r.Email__c,&quot;donmario&quot;),CONTAINS(SiteUser__r.Email__c,&quot;gdmseeds&quot;)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDM count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>