force-app/main/default/objects/Plot_Saved_Soy__c/fields/GID__c.field-meta.xml
<CustomField>
    <fullName>GID__c</fullName>
    <formula>Variety__r.Nombre_de_Registro__c</formula>
    <label>GID</label>
    <type>Text</type>
</CustomField>