force-app/main/default/objects/Plot_Saved_Soy__c/fields/Green_Stem__c.field-meta.xml
<CustomField>
    <fullName>Green_Stem__c</fullName>
    <label>Green Stem</label>
    <length>10</length>
    <type>Text</type>
</CustomField>