force-app/main/default/objects/Plot_Saved_Soy__c/fields/Like_numeric__c.field-meta.xml
<CustomField>
    <fullName>Like_numeric__c</fullName>
    <formula>IF(Like_Plot_Cell__c,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Like numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>