force-app/main/default/objects/Plot_Saved_Soy__c/fields/Like_Plot_Cell__c.field-meta.xml
<CustomField>
    <fullName>Like_Plot_Cell__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be &quot;Checked&quot; if the user &quot;Likes&quot; a Plot Note in GDM Explore.</inlineHelpText>
    <label>&quot;Like&quot; Plot Cell</label>
    <type>Checkbox</type>
</CustomField>