force-app/main/default/objects/Plot_Saved_Soy__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>Plot_Location__r.Location__r.Name + &quot;, &quot; + Plot_Location__r.Location__r.State_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plot Location Name</label>
    <type>Text</type>
</CustomField>