force-app/main/default/objects/Plot_Saved_Soy__c/fields/Lodging__c.field-meta.xml
<CustomField>
    <fullName>Lodging__c</fullName>
    <label>Standability</label>
    <length>10</length>
    <type>Text</type>
</CustomField>