force-app/main/default/objects/Plot_Saved_Soy__c/fields/Mass_Plot_Note__c.field-meta.xml
<CustomField>
    <fullName>Mass_Plot_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mass Plot Note</label>
    <referenceTo>Mass_Plot_Note__c</referenceTo>
    <relationshipLabel>Plot Notes</relationshipLabel>
    <relationshipName>Plot_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>