force-app/main/default/objects/Plot_Saved_Soy__c/fields/Note_image__c.field-meta.xml
<CustomField>
    <fullName>Note_image__c</fullName>
    <formula>IMAGE(&apos;https://app1.gdmseeds.com/Mobile/uploads/&apos; + Image_name__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note image</label>
    <type>Text</type>
</CustomField>