force-app/main/default/objects/Plot_Saved_Soy__c/fields/Plant_Type__c.field-meta.xml
<CustomField>
    <fullName>Plant_Type__c</fullName>
    <label>Plant Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>