force-app/main/default/objects/Plot_Saved_Soy__c/fields/Plot_Cell__c.field-meta.xml
<CustomField>
    <fullName>Plot_Cell__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Cell</label>
    <referenceTo>Explore_Plot_Cell__c</referenceTo>
    <relationshipLabel>Plot Notes</relationshipLabel>
    <relationshipName>Plot_Saved_Soys</relationshipName>
    <type>Lookup</type>
</CustomField>