force-app/main/default/objects/Plot_Saved_Soy__c/fields/Plot_Location__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Location</label>
    <referenceTo>Plot_Location__c</referenceTo>
    <relationshipName>Plot_Saved_Soys</relationshipName>
    <type>Lookup</type>
</CustomField>