force-app/main/default/objects/Plot_Saved_Soy__c/fields/Plot_location_LOng_Id__c.field-meta.xml
<CustomField>
    <fullName>Plot_location_LOng_Id__c</fullName>
    <formula>Plot_Location__r.Id_Largo__c</formula>
    <label>Plot location Long Id</label>
    <type>Text</type>
</CustomField>