force-app/main/default/objects/Plot_Saved_Soy__c/fields/Relative_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Relative_Maturity__c</fullName>
    <label>Relative Maturity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>