force-app/main/default/objects/Plot_Saved_Soy__c/fields/SDS__c.field-meta.xml
<CustomField>
    <fullName>SDS__c</fullName>
    <label>SDS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>