force-app/main/default/objects/Plot_Saved_Soy__c/fields/Shattering__c.field-meta.xml
<CustomField>
    <fullName>Shattering__c</fullName>
    <label>Shattering</label>
    <length>10</length>
    <type>Text</type>
</CustomField>