force-app/main/default/objects/Plot_Saved_Soy__c/fields/SiteUser__c.field-meta.xml
<CustomField>
    <fullName>SiteUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUser</label>
    <referenceTo>SiteUser__c</referenceTo>
    <relationshipName>Plot_Saved_Soys</relationshipName>
    <type>Lookup</type>
</CustomField>