force-app/main/default/objects/Plot_Saved_Soy__c/fields/Target_Spot__c.field-meta.xml
<CustomField>
    <fullName>Target_Spot__c</fullName>
    <label>Target Spot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>