force-app/main/default/objects/Plot_Saved_Soy__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipName>Plot_Saved_Soys</relationshipName>
    <type>Lookup</type>
</CustomField>