force-app/main/default/objects/Plot_Saved_Soy__c/fields/Variety_Check__c.field-meta.xml
<CustomField>
    <fullName>Variety_Check__c</fullName>
    <formula>Variety__r.Check_Variety__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variety Check</label>
    <type>Checkbox</type>
</CustomField>