force-app/main/default/objects/Plot_Saved_Soy__c/fields/Variety_RM__c.field-meta.xml
<CustomField>
    <fullName>Variety_RM__c</fullName>
    <formula>Variety__r.Relative_Maturity__c</formula>
    <label>Variety RM</label>
    <type>Text</type>
</CustomField>