force-app/main/default/objects/Plot_Saved_Soy__c/fields/Variety_Technology__c.field-meta.xml
<CustomField>
    <fullName>Variety_Technology__c</fullName>
    <formula>TEXT(Variety__r.Tecnologia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variety Technology</label>
    <type>Text</type>
</CustomField>