force-app/main/default/objects/Plot_Saved_Soy__c/fields/Variety_view__c.field-meta.xml
<CustomField>
    <fullName>Variety_view__c</fullName>
    <label>Variety view</label>
    <length>40</length>
    <type>Text</type>
</CustomField>