force-app/main/default/objects/Plot_Saved_Soy__c/fields/White_Mold__c.field-meta.xml
<CustomField>
    <fullName>White_Mold__c</fullName>
    <label>White Mold</label>
    <length>10</length>
    <type>Text</type>
</CustomField>