force-app/main/default/objects/Plot_Saved_Soy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>SiteUser__c</columns>
    <columns>Variety__c</columns>
    <columns>Created_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Plot_Location__c</columns>
    <columns>Plot_Cell__c</columns>
    <columns>Note__c</columns>
    <columns>Relative_Maturity__c</columns>
    <columns>Variety_RM__c</columns>
    <columns>Type__c</columns>
    <columns>Eye_appeal__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SiteUser__c</field>
        <operation>equals</operation>
        <value>Drake Paul</value>
    </filters>
    <label>All</label>
</ListView>