force-app/main/default/objects/Plot_Saved_Soy__c/listViews/All_Locations_inactive.listView-meta.xml
<ListView>
    <fullName>All_Locations_inactive</fullName>
    <columns>NAME</columns>
    <columns>Plot_Cell__c</columns>
    <columns>SiteUser__c</columns>
    <columns>Type__c</columns>
    <columns>Plot_Location__c</columns>
    <columns>Variety__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plot_Location__c</field>
        <operation>equals</operation>
        <value>RIDGWAY,CLEVELAND,CLARKSDALE</value>
    </filters>
    <label>All Locations inactive</label>
</ListView>