force-app/main/default/objects/Plot_Saved_Soy__c/listViews/Brazil.listView-meta.xml
<ListView>
    <fullName>Brazil</fullName>
    <columns>NAME</columns>
    <columns>SiteUser__c</columns>
    <columns>Type__c</columns>
    <columns>Plot_Location__c</columns>
    <columns>Variety__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Brazil</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Brazil</label>
</ListView>