force-app/main/default/objects/Plot_Saved_Soy__c/listViews/Lucas_notes.listView-meta.xml
<ListView>
    <fullName>Lucas_notes</fullName>
    <columns>NAME</columns>
    <columns>SiteUser__c</columns>
    <columns>Note__c</columns>
    <columns>Type__c</columns>
    <columns>Plot_Location__c</columns>
    <columns>Variety__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Plot_Cell__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/23/2022 12:00 AM</value>
    </filters>
    <label>Lucas notes</label>
</ListView>