force-app/main/default/objects/Plot_Saved_Soy__c/listViews/Not_GDM.listView-meta.xml
<ListView>
    <fullName>Not_GDM</fullName>
    <columns>NAME</columns>
    <columns>SiteUser__c</columns>
    <columns>Type__c</columns>
    <columns>Plot_Location__c</columns>
    <columns>Variety__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/10/2020 12:00 AM</value>
    </filters>
    <label>Notes and Favs 2020</label>
</ListView>