force-app/main/default/objects/Plot_Saved_Soy__c/listViews/Notes_with_Images.listView-meta.xml
<ListView>
    <fullName>Notes_with_Images</fullName>
    <columns>NAME</columns>
    <columns>SiteUser__c</columns>
    <columns>Note__c</columns>
    <columns>Type__c</columns>
    <columns>Plot_Location__c</columns>
    <columns>Variety__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Country__c</columns>
    <columns>Plot_Cell__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Image_name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>NOTE</value>
    </filters>
    <filters>
        <field>Image_name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Notes with Images</label>
</ListView>