force-app/main/default/objects/Plot_Saved_Soy__c/listViews/Plot_Note_Scores.listView-meta.xml
<ListView>
    <fullName>Plot_Note_Scores</fullName>
    <columns>NAME</columns>
    <columns>SiteUser__c</columns>
    <columns>Location__c</columns>
    <columns>Type__c</columns>
    <columns>Variety__c</columns>
    <columns>Note__c</columns>
    <columns>Relative_Maturity__c</columns>
    <columns>Eye_appeal__c</columns>
    <columns>Lodging__c</columns>
    <columns>Height__c</columns>
    <columns>Plant_Type__c</columns>
    <columns>Frogeye__c</columns>
    <columns>Green_Stem__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/1/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>Variety__c</field>
        <operation>contains</operation>
        <value>SUE200625</value>
    </filters>
    <label>Plot Note Scores</label>
</ListView>